--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <title>UDOS Cockpit</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 <body>
@@ -17,16 +17,10 @@
     <button id="toggle-shift">Start Shift</button>
   </header>
 
-  <section id="ride-buttons" style="display:none;">
+  <section id="ride-buttons">
     <button class="ride-mode" data-mode="Comfort">Comfort</button>
     <button class="ride-mode" data-mode="XL">XL</button>
     <button class="ride-mode" data-mode="Premier">Premier</button>
-  </section>
-
-  <section id="end-ride-section" style="display:none;">
-    <button id="end-ride">End Ride</button>
-    <input type="number" id="net-profit" placeholder="Enter fare" style="display:none;">
-    <button id="submit-profit" style="display:none;">Submit</button>
   </section>
 
   <section id="intel-map-container">
@@ -35,12 +29,17 @@
         <h2>🧠 Grok Intel</h2>
         <ul id="phases"></ul>
       </div>
-
       <div id="map-panel">
         <h2>🗺️ Map</h2>
         <div id="map"></div>
       </div>
     </div>
+  </section>
+
+  <section id="end-ride-section" style="display:none;">
+    <button id="end-ride">End Ride</button>
+    <input type="number" id="net-profit" placeholder="Enter fare" style="display:none;" />
+    <button id="submit-profit" style="display:none;">Submit</button>
   </section>
 
   <section id="bottom-controls">
